--- a/secciones/mdp.html
+++ b/secciones/mdp.html
@@ -1,6 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel= "shortcut icon" href="imagenes/latinbomnlogo.ico" type="image/x-icon">
+    <meta property="og:tittle" content= "LatinBomb | Venta de Indumentaria y ropa interior">
+    <meta property="og:description" content="Enterate de todos nuestros descuentos y novedades ingresando al link"> 
+    <meta property="og:image" content= "http://127.0.0.1:5500/imagenes/latinbomnlogo.png">  
+    <meta property="og:site_name" content="LatinBomb">
+    <meta property="og:type" content="website"> 
+    <meta property="og:locale" content="es_ES">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -12,7 +19,7 @@
     <!--- CABECERA-->
     <header class="logo-container">
             <div class="logo">
-                <img src="/imagenes/latinbomnlogo.png" alt="Logo de la empresa" width="50px">
+                <img src="imagenes/latinbomnlogo.png" alt="Logo de la empresa" width="50px">
             </div>
             <div class="slogan">
                 <h1>Que explote tu mayor potencial</h1>
@@ -29,10 +36,10 @@
         <div class="collapse navbar-collapse show" id="navbarNavAltMarkup">
           <div class="navbar-nav">
             <a class="nav-link active" aria-current="page" href="#"></a>
-            <a class="nav-link inicio" href="/index.html">Inicio</a>
-            <a class="nav-link mediosdepago" href="/secciones/mdp.html">Medios de pago</a>
-            <a class="nav-link sale" href="/secciones/sale.html">Sale</a>
-            <a class="nav-link nosotros" href="/secciones/nosotros.html">Nosotros</a>
+            <a class="nav-link inicio" href="index.html">Inicio</a>
+            <a class="nav-link mediosdepago" href="secciones/mdp.html">Medios de pago</a>
+            <a class="nav-link sale" href="secciones/sale.html">Sale</a>
+            <a class="nav-link nosotros" href="secciones/nosotros.html">Nosotros</a>
             <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true"></a>
           </div>
         </div>
@@ -50,13 +57,13 @@
         </ol>
         <div class="carousel-inner w-70">
           <div class="carousel-item active">
-            <img src="/imagenes/mp.png" class="d-block w-100" alt="Mercado Pago">
+            <img src="imagenes/mp.png" class="d-block w-100" alt="Mercado Pago">
           </div>
           <div class="carousel-item">
-            <img src="/imagenes/tb.png" class="d-block w-100" alt="Transferencia">
+            <img src="imagenes/tb.png" class="d-block w-100" alt="Transferencia">
           </div>
           <div class="carousel-item">
-            <img src="/imagenes/efect.png" class="d-block w-100" alt="Efectivo">
+            <img src="imagenes/efect.png" class="d-block w-100" alt="Efectivo">
           </div>
         </div>
         <a class="carousel-control-prev" href="#carouselWithIndicators" role="button" data-bs-slide="prev">
@@ -72,7 +79,8 @@
     </main>
     <!--- FIN DE SITIO PRINCIPAL-->
     <aside class="whats-container">
-        <div class="whats"> <a href="https://wa.me/1155956251"><img src="/imagenes/logowsp.png" alt="Hablar con empleados" width="85px"></a>
+        <div class="whats"> <a href="https://wa.me/1155956251">
+          <img src="imagenes/logowsp.png" alt="Hablar con empleados" width="85px"></a>
         </div>
      </aside>
     <!-- PIE DE PAGINA-->
