--- a/secciones/trajes-de-baño.html
+++ b/secciones/trajes-de-baño.html
@@ -13,13 +13,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Trajes de bañp</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
-    <link rel="stylesheet" href="/../css/style.css">
+    <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
     <!--- CABECERA-->
     <header class="logo-container">
             <div class="logo">
-                <img src="/../imagenes/latinbomnlogo.png" alt="Logo de la empresa" width="50px">
+                <img src="../imagenes/latinbomnlogo.png" alt="Logo de la empresa" width="50px">
             </div>
             <div class="slogan">
                 <h1>Que explote tu mayor potencial</h1>
@@ -37,10 +37,10 @@
               <div class="collapse navbar-collapse show" id="navbarNavAltMarkup">
                 <div class="navbar-nav">
                   <a class="nav-link active" aria-current="page" href="#"></a>
-                  <a class="nav-link inicio" href="/../index.html">Inicio</a>
-                  <a class="nav-link mediosdepago" href="/../secciones/mdp.html">Medios de pago</a>
-                  <a class="nav-link sale" href="/../secciones/sale.html">Sale</a>
-                  <a class="nav-link nosotros" href="/../secciones/nosotros.html">Nosotros</a>
+                  <a class="nav-link inicio" href="../index.html">Inicio</a>
+                  <a class="nav-link mediosdepago" href="../secciones/mdp.html">Medios de pago</a>
+                  <a class="nav-link sale" href="../secciones/sale.html">Sale</a>
+                  <a class="nav-link nosotros" href="../secciones/nosotros.html">Nosotros</a>
                   <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true"></a>
                 </div>
               </div>
@@ -55,37 +55,37 @@
     <!-- TRAJES DE BAÑO -->
     <div class="producto">
         <div class="producto-blanco">
-            <a href="/../imagenes/im26.jpg"><img src="/../imagenes/im26.jpg" alt="ART1" width="200"></a>
+            <a href="../imagenes/im26.jpg"><img src="../imagenes/im26.jpg" alt="ART1" width="200"></a>
          </div>
         <div class="producto-informacion">
             <p class="producto-nombre">ART1</p>
         </div>
         <div class="producto-blanco">
-            <a href="/../imagenes/im27.jpg"><img src="/../imagenes/im27.jpg" alt="ART2" width="200"></a>
+            <a href="/../imagenes/im27.jpg"><img src="../imagenes/im27.jpg" alt="ART2" width="200"></a>
          </div>
         <div class="producto-informacion">
             <p class="producto-nombre">ART2</p>
         </div>
         <div class="producto-blanco">
-            <a href="/../imagenes/im28.jpg"><img src="/../imagenes/im28.jpg" alt="ART3" width="200"></a>
+            <a href="/../imagenes/im28.jpg"><img src="../imagenes/im28.jpg" alt="ART3" width="200"></a>
          </div>
         <div class="producto-informacion">
             <p class="producto-nombre">ART3</p>
         </div>
         <div class="producto-blanco">
-            <a href="/../imagenes/im29.jpg"><img src="/../imagenes/im29.jpg" alt="ART4" width="200"></a>
+            <a href="/../imagenes/im29.jpg"><img src="../imagenes/im29.jpg" alt="ART4" width="200"></a>
          </div>
         <div class="producto-informacion">
             <p class="producto-nombre">ART4</p>
         </div>
         <div class="producto-blanco">
-            <a href="/../imagenes/im30.jpg"><img src="/../imagenes/im30.jpg" alt="ART2" width="200"></a>
+            <a href="/../imagenes/im30.jpg"><img src="../imagenes/im30.jpg" alt="ART2" width="200"></a>
          </div>
         <div class="producto-informacion">
             <p class="producto-nombre">ART5</p>
         </div>
         <div class="producto-blanco">
-            <a href="/../imagenes/im31.jpg"><img src="/../imagenes/im31.jpg" alt="ART6" width="200"></a>
+            <a href="/../imagenes/im31.jpg"><img src="../imagenes/im31.jpg" alt="ART6" width="200"></a>
          </div>
         <div class="producto-informacion">
             <p class="producto-nombre">ART6</p>
