--- a/secciones/trajes-de-baño.html
+++ b/secciones/trajes-de-baño.html
@@ -1,17 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel= "shortcut icon" href="../imagenes/latinbomnlogo.ico" type="image/x-icon">
-    <meta property="og:tittle" content= "LatinBomb | Venta de Indumentaria y ropa interior">
-    <meta property="og:description" content="Enterate de todos nuestros descuentos y novedades ingresando al link"> 
-    <meta property="og:image" content= "http://127.0.0.1:5500/imagenes/latinbomnlogo.png">  
-    <meta property="og:site_name" content="LatinBomb">
-    <meta property="og:type" content="website"> 
-    <meta property="og:locale" content="es_ES">
+    <link rel= "shortcut icon" href="imagenes/latinbomnlogo.ico" type="image/x-icon">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Trajes de bañp</title>
+    <title>Trajes de baño</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/style.css">
 </head>
@@ -61,31 +55,31 @@
             <p class="producto-nombre">ART1</p>
         </div>
         <div class="producto-blanco">
-            <a href="/../imagenes/im27.jpg"><img src="../imagenes/im27.jpg" alt="ART2" width="200"></a>
+            <a href="../imagenes/im27.jpg"><img src="../imagenes/im27.jpg" alt="ART2" width="200"></a>
          </div>
         <div class="producto-informacion">
             <p class="producto-nombre">ART2</p>
         </div>
         <div class="producto-blanco">
-            <a href="/../imagenes/im28.jpg"><img src="../imagenes/im28.jpg" alt="ART3" width="200"></a>
+            <a href="../imagenes/im28.jpg"><img src="../imagenes/im28.jpg" alt="ART3" width="200"></a>
          </div>
         <div class="producto-informacion">
             <p class="producto-nombre">ART3</p>
         </div>
         <div class="producto-blanco">
-            <a href="/../imagenes/im29.jpg"><img src="../imagenes/im29.jpg" alt="ART4" width="200"></a>
+            <a href="../imagenes/im29.jpg"><img src="../imagenes/im29.jpg" alt="ART4" width="200"></a>
          </div>
         <div class="producto-informacion">
             <p class="producto-nombre">ART4</p>
         </div>
         <div class="producto-blanco">
-            <a href="/../imagenes/im30.jpg"><img src="../imagenes/im30.jpg" alt="ART2" width="200"></a>
+            <a href="../imagenes/im30.jpg"><img src="../imagenes/im30.jpg" alt="ART2" width="200"></a>
          </div>
         <div class="producto-informacion">
             <p class="producto-nombre">ART5</p>
         </div>
         <div class="producto-blanco">
-            <a href="/../imagenes/im31.jpg"><img src="../imagenes/im31.jpg" alt="ART6" width="200"></a>
+            <a href="../imagenes/im31.jpg"><img src="../imagenes/im31.jpg" alt="ART6" width="200"></a>
          </div>
         <div class="producto-informacion">
             <p class="producto-nombre">ART6</p>
